--- a/src/main/resources/es/cesur/progprojectpok/view/tienda-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/tienda-view.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -18,46 +23,67 @@
          <children>
             <AnchorPane layoutX="21.0" layoutY="21.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="15.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgObj1" fitHeight="111.0" fitWidth="115.0" layoutX="15.0" layoutY="9.0" onMouseClicked="#mostrarObj1" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/pokeball.png" />
+                        <Image url="@../images/Objetos/pokeball.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="203.0" layoutY="21.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj2" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" onMouseClicked="#mostrarObj2" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/chaleco.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="21.0" layoutY="155.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj3" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="27.0" onMouseClicked="#mostrarObj3" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/anillo.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="203.0" layoutY="155.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj4" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" onMouseClicked="#mostrarObj4" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/eter.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="21.0" layoutY="290.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj5" fitHeight="111.0" fitWidth="115.0" layoutX="36.0" layoutY="9.0" onMouseClicked="#mostrarObj5" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/baston.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="203.0" layoutY="290.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj6" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="13.0" onMouseClicked="#mostrarObj6" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/pila.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="21.0" layoutY="424.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj7" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" onMouseClicked="#mostrarObj7" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/pluma.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="203.0" layoutY="424.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="12.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgObj8" fitHeight="111.0" fitWidth="115.0" layoutX="12.0" layoutY="9.0" onMouseClicked="#mostrarObj8" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Objetos/pesa.png" />
+                     </image></ImageView>
                </children>
             </AnchorPane>
          </children></AnchorPane>
@@ -65,18 +91,18 @@
          <children>
             <AnchorPane layoutX="36.0" layoutY="38.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgObjetoComprar" fitHeight="111.0" fitWidth="115.0" layoutX="11.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/pokeball.png" />
                      </image></ImageView>
                </children>
             </AnchorPane>
-            <Label alignment="TOP_LEFT" layoutX="35.0" layoutY="191.0" prefHeight="226.0" prefWidth="566.0" style="-fx-border-color: white;" text="Descripcion + Propiedades del objeto" textFill="WHITE" />
+            <Label fx:id="lblDescripcion" alignment="TOP_LEFT" layoutX="35.0" layoutY="191.0" prefHeight="226.0" prefWidth="566.0" style="-fx-border-color: white;" text="Descripcion + Propiedades del objeto" textFill="WHITE" />
             <AnchorPane layoutX="532.0" layoutY="38.0" prefHeight="111.0" prefWidth="70.0" style="-fx-border-color: white;">
                <children>
-                  <Button layoutX="9.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="+" />
-                  <Button layoutX="9.0" layoutY="72.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="-" />
-                  <Label alignment="CENTER" layoutX="9.0" layoutY="46.0" prefHeight="17.0" prefWidth="52.0" text="0" textFill="WHITE">
+                  <Button layoutX="9.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnSumarCant" prefHeight="25.0" prefWidth="52.0" text="+" />
+                  <Button layoutX="9.0" layoutY="72.0" mnemonicParsing="false" onAction="#btnRestarCant" prefHeight="25.0" prefWidth="52.0" text="-" />
+                  <Label fx:id="lblCantidadObj" alignment="CENTER" layoutX="9.0" layoutY="46.0" prefHeight="17.0" prefWidth="52.0" text="0" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -85,7 +111,7 @@
             </AnchorPane>
             <AnchorPane layoutX="184.0" layoutY="38.0" prefHeight="111.0" prefWidth="337.0">
                <children>
-                  <Label alignment="TOP_LEFT" prefHeight="111.0" prefWidth="337.0" style="-fx-border-color: white;" text="Nombre + Precio" textFill="WHITE" />
+                  <Label fx:id="lblNombrePrecio" alignment="TOP_LEFT" prefHeight="111.0" prefWidth="337.0" style="-fx-border-color: white;" text="Nombre + Precio" textFill="WHITE" />
                </children>
             </AnchorPane>
          </children></AnchorPane>
